# api

./: .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  main.rs  models.rs  utils.rs
src/methods/: get.rs  mod.rs  post.rs
src/middleware/: auth.rs
