[package]
name = "neura-labs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neura-labs-engine = { path = "../engine" }
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1"
futures = "0.3.28"
chrono = { version = "0.4.24", features = ["serde"] }
env-file-reader = "0.3.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
actix-http = "3.3.1"
futures-util = "0.3.28"
ring = "0.16.20"
base64 = "0.21.0"

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["tokio-sync"]
